# football-predictor

./: .gitignore  README.md  pyproject.toml
resources/historic/understat/: epl_league_results_2015.json  epl_league_results_2018.json  epl_league_results_2021.json  epl_league_results_2022.json  epl_league_results_2023.json
src/football_predictor/data/: historic_data_engineering.py
src/football_predictor/model/: training.py
src/football_predictor/predict/: predict.py
