[tool.poetry]
name = "football-predictor"
version = "0.1.0"
description = ""
authors = ["lewis.king <lking1221@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.3"
understat = "^0.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
