[tool.poetry]
name = "football-predictor"
version = "0.1.0"
description = ""
authors = ["lewis.king <lking1221@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "2.2.3"
understat = "^0.1.12"
scikit-learn = "^1.4.0"
tensorflow = "2.15.0"
tensorflow-io-gcs-filesystem = "0.31.0"
matplotlib = "^3.9.2"
keras-tuner = "^1.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
